Fix table alignment

--- a/src/App.css
+++ b/src/App.css
@@ -213,13 +213,6 @@ select {
   background: #f8fafc;
 }
 
-.table-header div:nth-child(3),
-.table-header div:nth-child(4),
-.table-row div:nth-child(3),
-.table-row div:nth-child(4) {
-  text-align: right;
-}
-
 .player {
   display: flex;
   align-items: center;
@@ -239,6 +232,11 @@ select {
 
 .numeric {
   font-variant-numeric: tabular-nums;
+  text-align: right;
+}
+
+.table-header .numeric {
+  text-align: right;
 }
 
 .pos {
